# riverboat-prototype

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs
backend/src/calc/: gen.rs  mod.rs  payout.rs
backend/src/models/: basic.rs  mod.rs  wbm.rs
backend/src/routes/: mod.rs
backend/src/state/: graph.rs  handle.rs  mod.rs
src/: Minus.js  ModelTable.js  Orb.js  Riverboat.js  SwitchTable.js  index.js  theme.js
src/components/: Minus.js  ModelTable.js  Orb.js  StickyFooter.js  SwitchTable.js
