[package]
name = "rustboat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
neo4jrs = { path = "./neo4jrs/lib" }
tokio = "1.16.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
http-types = "2.12.0"
env_logger = "0.9.0"
log = "0.4.14"
rand = "0.8.5"